AI version of original code

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "No libraries are used, everything is made from scratch",
   "main": "neural_network.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node neural_network.js"
   },
   "repository": {
     "type": "git",
